// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when merging two objects and a source property has an $expression indicator and a $merge indicator then the expression should have a local property named '$sourceRoot' referring to the processed $merge.with property 1`] = `
"{
	\\"hasSomeProp\\": true,
	\\"someProp\\": 10
}"
`;

exports[`when merging two objects and a source property has an $expression indicator and a $merge indicator then the expression should have a local property named '$targetRoot' referring to the processed $merge.source property 1`] = `
"{
	\\"a\\": \\"original\\",
	\\"isOriginal\\": true
}"
`;

exports[`when merging two objects and a source property has an $expression indicator it should execute the expression and return the result 1`] = `
"{
	\\"a\\": {
		\\"aa\\": 10
	}
}"
`;

exports[`when merging two objects and a source property has an $expression indicator then the expression should have a access to the JavaScript engine APIs 1`] = `
"{
	\\"a\\": {
		\\"aa\\": 2017
	}
}"
`;

exports[`when merging two objects and a source property has an $expression indicator then the expression should have a local property named '$source' referring to the unprocessed source property 1`] = `
"{
	\\"a\\": \\"is original\\"
}"
`;

exports[`when merging two objects and a source property has an $expression indicator then the expression should have a local property named '$sourceRoot' referring to the unprocessed source root 1`] = `
"{
	\\"a\\": \\"is original\\"
}"
`;

exports[`when merging two objects and a source property has an $expression indicator then the expression should have a local property named '$target' referring to the processed target property 1`] = `
"{
	\\"a\\": \\"is original\\"
}"
`;

exports[`when merging two objects and a source property has an $expression indicator then the expression should have a local property named '$targetRoot' referring to the processed target root 1`] = `
"{
	\\"a\\": \\"is original\\"
}"
`;
